# bubblemon

./: .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac
man/: bubblemon-applet.1.in
man/hu/: bubblemon-applet.1.in
man/sv/: bubblemon-applet.1.in
packaging/: bubblemon-applet.spec.in
panel/dbus/: org.@APPLET_SCHEMA_ORG@.panel.BubblemonApplet.@APPLET_FILETYPE@.in.in  org.@APPLET_SCHEMA_ORG@.panel.applet.BubblemonAppletFactory.service.in
panel/gnome3/: ui.c
panel/mate/: ui.c  ui.h
panel/xfce4/: bubblemon.desktop.in.in  ui.c
po/: ChangeLog  Makevars  POTFILES.in  ca.po  da.po  de.po  es.po  fi.po  fr.po  hu.po  is.po  it.po  ko.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po
src/: bubblemon.c  bubblemon.h
